fix #39 - add z-index to loading/please wait widget

--- a/skin/frontend/base/default/amazon_payments/css/styles_onepage.css
+++ b/skin/frontend/base/default/amazon_payments/css/styles_onepage.css
@@ -28,6 +28,10 @@
   margin-bottom:1em;
 }
 
+#widget-please-wait {
+  z-index:50;
+}
+
 @media all and (max-width: 640px) {
   #amazon-widget-address-wrapper,
   #amazon-widget-wallet-wrapper {
